--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="https://img.freepik.com/premium-photo/fire-alphabet-letter-isolated-black-background_564276-8929.jpg?w=2000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arup Chakraborty</title>
+    <title>Anshuman Mahato</title>
     <!---------Favicon----------->
 
     <!-----------REMIXICONS-------->
@@ -17,7 +17,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
-                Arup <span>Chakraborty</span>
+                Anshuman <span>Mahato</span>
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -57,27 +57,26 @@
         <div class="home__content">
             <div class="home__data">
                 <h3 class="home__subtitle">
-                    Hello, <span>I,m</span>
+                    Hello, <span>I'm</span>
                 </h3>
                 <h1 class="home__title">
-                    Arup Chakraborty
+                    Anshuman Mahato
                 </h1>
-                <h3 class="home__education">Full Stack Developer</h3>
+                <h3 class="home__education">Web Developer</h3>
 
                 <p class="home__description">
-                    I have been involved in web development for a year and also doing Competitive Programming.
-                    I also have problem solving mindset.If you give me chance, I want to show up my problem solving knowledge and skill,s.
+                    With knowledge in web development and design, I offer the best projects resulting in quality work.
                 </p>
                 <a href="#contact" class="button">Let's Talk</a>
             </div>
             <div class="home__social">
-                <a href="https://github.com/arup99-glitch" target="_blank" class="home__social-link">
+                <a href="https://github.com/anshumanmahato" target="_blank" class="home__social-link">
                     <i class="ri-github-fill"></i>
                 </a>
                 <a href="" target="_blank" class="home__social-link">
-                    <i class="ri-mail-fill"></i>
+                    <i class="ri-twitter-fill"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/arup-chakraborty-425b73221/" target="_blank" class="home__social-link">
+                <a href="https://www.linkedin.com/in/anshuman-mahato/" target="_blank" class="home__social-link">
                     <i class="ri-linkedin-box-fill"></i>
                 </a>
             </div>
@@ -124,7 +123,7 @@
         <div class="about__container container grid">
             <div class="about__data">
                 <h3 class="section__subtitle">
-                    my <span>Intro</span>
+                    My <span>Intro</span>
                 </h3>
 
                 <h3 class="section__title">
@@ -201,10 +200,10 @@
                 </ol>
 
                 <ol class="skills__group" start="5">
-                    <li class="skills__item">Git & Github</li>
-                    <li class="skills__item">Figma</li>
+                    <li class="skills__item">NodeJS</li>
+                    <li class="skills__item">ExpressJS</li>
                     <li class="skills__item">MongoDB</li>
-                    <li class="skills__item">Firebase</li>
+                    <li class="skills__item">Git & Github</li>
                 </ol>
             </div>
 
@@ -272,7 +271,7 @@
                     <div class="projects__modal">
                         <span class="projects__subtitle">Web</span>
                         <h2 class="projects__title">Modern website</h2>
-                        <a href="https://carnava-by-arup.netlify.app/" class="projects__button">
+                        <a href="https://carnava-by-Anshuman.netlify.app/" class="projects__button">
                             View demo <i class="ri-external-link-line"></i>
                         </a>
                     </div>
@@ -284,39 +283,6 @@
                         <span class="projects__subtitle">Web</span>
                         <h2 class="projects__title">Modern website</h2>
                         <a href="https://winter-vaccation-f113e.web.app/" class="projects__button">
-                            View demo <i class="ri-external-link-line"></i>
-                        </a>
-                    </div>
-                </article>
-
-                <article class="projects__card">
-                    <img src="./Img/project4.png" alt="projects image" class="projects__img">
-                    <div class="projects__modal">
-                        <span class="projects__subtitle">Web</span>
-                        <h2 class="projects__title">Modern website</h2>
-                        <a href="https://rainbow-pixie-ccbdb2.netlify.app/" class="projects__button">
-                            View demo <i class="ri-external-link-line"></i>
-                        </a>
-                    </div>
-                </article>
-
-                <article class="projects__card">
-                    <img src="./Img/project5.png" alt="projects image" class="projects__img">
-                    <div class="projects__modal">
-                        <span class="projects__subtitle">Web</span>
-                        <h2 class="projects__title">Modern website</h2>
-                        <a href="https://strong-torrone-1310bd.netlify.app/" class="projects__button">
-                            View demo <i class="ri-external-link-line"></i>
-                        </a>
-                    </div>
-                </article>
-
-                <article class="projects__card">
-                    <img src="./Img/project6.png" alt="projects image" class="projects__img">
-                    <div class="projects__modal">
-                        <span class="projects__subtitle">Web</span>
-                        <h2 class="projects__title">Modern website</h2>
-                        <a href="https://brave-fermat-892561.netlify.app/" class="projects__button">
                             View demo <i class="ri-external-link-line"></i>
                         </a>
                     </div>
@@ -353,28 +319,28 @@
         <div class="footer__container container grid">
             <div>
                 <h1 class="footer__title">
-                    Arup <span>Chakraborty</span>
+                    Anshuman <span>Mahato</span>
                 </h1>
                 <h2 class="footer__education">
-                    WEB DEVELOPER(MERN)
+                    WEB DEVELOPER
                 </h2>
             </div>
 
             <div class="footer__social">
-                <a href="https://www.facebook.com/arup.chakraborty.108889?mibextid=ZbWKwL" target="_blank"class="footer__social-link">
+                <a href="https://www.facebook.com/Anshuman.Mahato.108889?mibextid=ZbWKwL" target="_blank"class="footer__social-link">
                     <i class="ri-facebook-circle-line"></i>
                 </a>
 
-                <a href="https://www.instagram.com/arup_chakra_borty/" target="_blank"class="footer__social-link">
+                <a href="https://www.instagram.com/Anshuman_chakra_borty/" target="_blank"class="footer__social-link">
                     <i class="ri-instagram-line"></i>
                 </a>
 
-                <a href="https://twitter.com/ArupCha01935516" target="_blank"class="footer__social-link">
+                <a href="https://twitter.com/AnshumanCha01935516" target="_blank"class="footer__social-link">
                     <i class="ri-twitter-line"></i>
                 </a>
             </div>
             <span class="footer__copy">
-                &#169; Copyright Arup Chakraborty.All rights reserved
+                &#169; Copyright Anshuman Mahato. All rights reserved
             </span>
         </div>
 
