services section done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a href="#services" class="nav__link">Services</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#project" class="nav__link">Project</a>
+                        <a href="#projects" class="nav__link">Project</a>
                     </li>
                     <li class="nav__item">
                         <a href="#contact" class="nav__link">Contact</a>
@@ -129,13 +129,25 @@
                 <h3 class="section__title">
                     About Me
                 </h3>
-                <p class="about__description">
-                    I'm a positive and resourceful individual who can execute difficult tasks.Honesty,Patience,Empathy,
-                    Initiative is my strong zone.I am a quick learner.
-                    Actually i want to learn something new everyday.
-                </p>
-                <a href="#cobtact" class="button">Contact Me</a>
-                <a href="https://drive.google.com/file/d/12kfU6QYbIvRltRV-Cb0AYa2vSnOW4IVF/view" class="button resume">Resume</a>
+                <div class="about__description">
+                    <p>
+                        I am an aspiring developer and mainly focus on web technology. 
+                         Apart from this, I also 
+                        have some experience in building chatbots for Telegram. 
+                    </p>
+                    <p>
+                        Till now, I have acquired proficiency in HTML, CSS, JavaScript, Bootstrap, NodeJS, Express, 
+                        and MongoDB. I am currently learning React and Tailwind.
+                    </p>
+                    <p>
+                        I am open to internships and part-time/freelance opportunities.
+                    </p>
+                    <p>
+                        That's it from my side! I will love to connect with you.
+                    </p>
+                </div>
+                <a href="#contact" class="button">Contact Me</a>
+                <a href="https://drive.google.com/file/d/1k3K-DiulvZXjtUhdUZCCr9LwOdQLLLUJ/view?usp=share_link" class="button resume">Resume</a>
             </div>
             <div class="about__image">
                 <svg class="about__blob" viewBox="0 0 550 592" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -189,7 +201,7 @@
                     See fully what skills I have and perform
                     to develop the project for you.
                 </p>
-                <a href="#project" class="button">See Projects</a>
+                <a href="#projects" class="button">See Projects</a>
             </div>
             <div class="skills__content">
                 <ol class="skills__group">
@@ -212,7 +224,7 @@
 
     <section class="services section" id="services">
      <h3 class="section__subtitle">
-        my <span>Learning
+        My <span>Domains
      </h3>   
      <h2 class="section__title">
         What I Do
@@ -220,28 +232,26 @@
      <div class="services__container container grid">
         <article class="services__card">
             <i class="ri-layout-3-line services__icon"></i>
-            <h2 class="services__title">Web Development(MERN)</h2>
+            <h2 class="services__title">Web Development</h2>
             <p class="services__description">
-                See fully what skills I have and perform
-                to develop the project for you.
+                I am well-versed in responsive design and can effectively port designs into code. 
+                I have an understanding of REST API and MVC architecture.
             </p>
         </article>
 
         <article class="services__card">
-            <i class="ri-code-line services__icon"></i>
-            <h2 class="services__title">Competitive Programming</h2>
+            <i class="ri-robot-line services__icon"></i>
+            <h2 class="services__title">ChatBot Development</h2>
             <p class="services__description">
-                See fully what skills I have and perform
-                to develop the project for you.
+                I can build Chatbots for popular platforms like Telegram and Discord in JavaScript.
             </p>
         </article>
 
         <article class="services__card">
-            <i class="ri-layout-3-line services__icon"></i>
-            <h2 class="services__title">Web Development(Java2EE)</h2>
+            <i class="ri-collage-fill services__icon"></i>
+            <h2 class="services__title">Graphic Design</h2>
             <p class="services__description">
-                See fully what skills I have and perform
-                to develop the project for you.
+                I can design attractive visual elements for web and social media using Adobe Illustrator and Canva.
             </p>
         </article>
     </section>
