block changes done

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <li class="nav__item">
                         <a href="#services" class="nav__link">Services</a>
                     </li>
-                    <li class="nav__item">
+                    <!-- <li class="nav__item">
                         <a href="#projects" class="nav__link">Project</a>
-                    </li>
+                    </li> -->
                     <li class="nav__item">
                         <a href="#contact" class="nav__link">Contact</a>
                     </li>
@@ -201,7 +201,7 @@
                     See fully what skills I have and perform
                     to develop the project for you.
                 </p>
-                <a href="#projects" class="button">See Projects</a>
+                <!-- <a href="#projects" class="button">See Projects</a> -->
             </div>
             <div class="skills__content">
                 <ol class="skills__group">
@@ -256,7 +256,7 @@
         </article>
     </section>
 
-        <section class="projects section" id="projects">
+        <!-- <section class="projects section" id="projects">
             <h3 class="section__subtitle">
                 My <span>Practice</span>
             </h3>
@@ -266,33 +266,33 @@
             </h2>
             <div class="projects__container container grid">
                 <article class="projects__card">
-                    <img src="./Img/project1.png" alt="projects image" class="projects__img">
+                    <img src="./img/project1.jpg" alt="projects image" class="projects__img">
                     <div class="projects__modal">
                         <span class="projects__subtitle">Web</span>
-                        <h2 class="projects__title">Modern website</h2>
-                        <a href="https://girls-world-9147f.web.app/" class="projects__button">
+                        <h2 class="projects__title">Customizable Birthday Card</h2>
+                        <a href="https://github.com/AnshumanMahato/Happy-Birthday-Card" class="projects__button">
                             View demo <i class="ri-external-link-line"></i>
                         </a>
                     </div>
                 </article>
 
                 <article class="projects__card">
-                    <img src="./Img/Project2.png" alt="projects image" class="projects__img">
+                    <img src="./img/project2.jpg" alt="projects image" class="projects__img">
                     <div class="projects__modal">
                         <span class="projects__subtitle">Web</span>
-                        <h2 class="projects__title">Modern website</h2>
-                        <a href="https://carnava-by-Anshuman.netlify.app/" class="projects__button">
+                        <h2 class="projects__title">Space Tourism Landing Page</h2>
+                        <a href="https://space-travel-frontendmentor-tau.vercel.app/" class="projects__button">
                             View demo <i class="ri-external-link-line"></i>
                         </a>
                     </div>
                 </article>
 
                 <article class="projects__card">
-                    <img src="./Img/project3.png" alt="projects image" class="projects__img">
+                    <img src="./img/project3.png" alt="projects image" class="projects__img">
                     <div class="projects__modal">
                         <span class="projects__subtitle">Web</span>
-                        <h2 class="projects__title">Modern website</h2>
-                        <a href="https://winter-vaccation-f113e.web.app/" class="projects__button">
+                        <h2 class="projects__title">Rock Paper Scissors Lizard Spock</h2>
+                        <a href="https://anshumanmahato.github.io/rock-paper-scissors/" class="projects__button">
                             View demo <i class="ri-external-link-line"></i>
                         </a>
                     </div>
@@ -300,7 +300,7 @@
             </div>
         
      </div>
-    </section>
+    </section> -->
     <section class="contact section" id="contact">
         <h3 class="section__subtitle">
             Get In<span>Touch</span>
@@ -337,15 +337,15 @@
             </div>
 
             <div class="footer__social">
-                <a href="https://www.facebook.com/Anshuman.Mahato.108889?mibextid=ZbWKwL" target="_blank"class="footer__social-link">
+                <a href="https://www.facebook.com/anshuman.mahato.0935/" target="_blank"class="footer__social-link">
                     <i class="ri-facebook-circle-line"></i>
                 </a>
 
-                <a href="https://www.instagram.com/Anshuman_chakra_borty/" target="_blank"class="footer__social-link">
+                <a href="https://www.instagram.com/anshuman_mahato/" target="_blank"class="footer__social-link">
                     <i class="ri-instagram-line"></i>
                 </a>
 
-                <a href="https://twitter.com/AnshumanCha01935516" target="_blank"class="footer__social-link">
+                <a href="https://twitter.com/AnshumanMahato_" target="_blank"class="footer__social-link">
                     <i class="ri-twitter-line"></i>
                 </a>
             </div>
