--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <li class="nav__item">
                         <a href="#services" class="nav__link">Services</a>
                     </li>
-                    <!-- <li class="nav__item">
-                        <a href="#projects" class="nav__link">Project</a>
-                    </li> -->
+                    <li class="nav__item">
+                        <a href="#projects" class="nav__link">Projects</a>
+                    </li>
                     <li class="nav__item">
                         <a href="#contact" class="nav__link">Contact</a>
                     </li>
@@ -201,7 +201,7 @@
                     See fully what skills I have and perform
                     to develop the project for you.
                 </p>
-                <!-- <a href="#projects" class="button">See Projects</a> -->
+                <a href="#projects" class="button">See Projects</a>
             </div>
             <div class="skills__content">
                 <ol class="skills__group">
@@ -224,7 +224,7 @@
 
     <section class="services section" id="services">
      <h3 class="section__subtitle">
-        My <span>Domains
+        My <span>Domains</span>
      </h3>   
      <h2 class="section__title">
         What I Do
@@ -256,54 +256,79 @@
         </article>
     </section>
 
-        <!-- <section class="projects section" id="projects">
-            <h3 class="section__subtitle">
-                My <span>Practice</span>
-            </h3>
+    <section class="projects section" id="projects">
+        <h3 class="section__subtitle">
+            My <span>Practice</span>
+        </h3>
 
-            <h2 class="section__title">
-                Recent Projects
-            </h2>
-            <div class="projects__container container grid">
-                <article class="projects__card">
-                    <img src="./img/project1.jpg" alt="projects image" class="projects__img">
-                    <div class="projects__modal">
-                        <span class="projects__subtitle">Web</span>
-                        <h2 class="projects__title">Customizable Birthday Card</h2>
-                        <a href="https://github.com/AnshumanMahato/Happy-Birthday-Card" class="projects__button">
-                            View demo <i class="ri-external-link-line"></i>
-                        </a>
-                    </div>
-                </article>
+        <h2 class="section__title">
+            Recent Projects
+        </h2>
+        <div class="projects__container container">
 
-                <article class="projects__card">
+            <article class="projects__card">
+                <div class="projects__image">
                     <img src="./img/project2.jpg" alt="projects image" class="projects__img">
-                    <div class="projects__modal">
-                        <span class="projects__subtitle">Web</span>
-                        <h2 class="projects__title">Space Tourism Landing Page</h2>
-                        <a href="https://space-travel-frontendmentor-tau.vercel.app/" class="projects__button">
-                            View demo <i class="ri-external-link-line"></i>
+                </div>
+                <div class="projects__desc">
+                    <h2 class="projects__title">Space Tourism Landing Page</h2>
+                    <p class="projects__about">
+                        Landing page for a hypothetical space tourism company. This webpage is made with React and user React Router. The website design is provided by frontendmentor  
+                    </p>
+                    <div class="projects__cta">
+                        <a href="https://space-travel-frontendmentor-tau.vercel.app/" class="projects__button button">
+                            View
+                        </a>
+                        <a href="https://space-travel-frontendmentor-tau.vercel.app/" class="projects__button button">
+                            Repo
                         </a>
                     </div>
-                </article>
-
-                <article class="projects__card">
+                </div>
+            </article>
+            <article class="projects__card">
+                <div class="projects__image">
+                    <img src="./img/project1.jpg" alt="projects image" class="projects__img">
+                </div>
+                <div class="projects__desc">
+                    <h2 class="projects__title">Customizable Birthday Card</h2>
+                    <p class="projects__about">
+                        An interactive birthday card to wish your friend and family members uniquely. This webpage is made with HTML, CSS (SASS) and Vanilla JavaScript.
+                    </p>
+                    <div class="projects__cta">
+                        <a href="https://space-travel-frontendmentor-tau.vercel.app/" class="projects__button button">
+                            View
+                        </a>
+                        <a href="https://space-travel-frontendmentor-tau.vercel.app/" class="projects__button button">
+                            Repo
+                        </a>
+                    </div>
+                </div>
+            </article>
+            <article class="projects__card">
+                <div class="projects__image">
                     <img src="./img/project3.png" alt="projects image" class="projects__img">
-                    <div class="projects__modal">
-                        <span class="projects__subtitle">Web</span>
-                        <h2 class="projects__title">Rock Paper Scissors Lizard Spock</h2>
-                        <a href="https://anshumanmahato.github.io/rock-paper-scissors/" class="projects__button">
-                            View demo <i class="ri-external-link-line"></i>
+                </div>
+                <div class="projects__desc">
+                    <h2 class="projects__title">Rock Paper Scissors Lizard Spock</h2>
+                    <p class="projects__about">
+                        A modified version of the Rock, Paper Scissors game based on an idea from the popular sitcom "The Big Bang Theory". This project was built using HTML, CSS and JavaScript,
+                    </p>
+                    <div class="projects__cta">
+                        <a href="https://space-travel-frontendmentor-tau.vercel.app/" class="projects__button button">
+                            View
+                        </a>
+                        <a href="https://space-travel-frontendmentor-tau.vercel.app/" class="projects__button button">
+                            Repo
                         </a>
                     </div>
-                </article>
-            </div>
-        
-     </div>
-    </section> -->
+                </div>
+            </article>
+
+        </div>        
+    </section>
     <section class="contact section" id="contact">
         <h3 class="section__subtitle">
-            Get In<span>Touch</span>
+            Get In <span>Touch</span>
         </h3>
         <h2 class="section__title">
             Contact Me
