--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                    </pattern>
              
                    <!-- Insert your profile (recommended size: 640 x 940) -->
-                   <image class="home__img" id="imageBlob" width="650" height="950" href="./Img/My project (2).png"/>
+                   <image class="home__img" id="imageBlob" width="650" height="950" href="./img/profile.png"/>
                 </defs>
              </svg>
         </div>
@@ -180,7 +180,7 @@
                        </pattern>
                  
                        <!-- Insert your profile (recommended size: 640 x 940) -->
-                       <image class="about__img" id="imageBorder" width="640" height="940" href="./Img/My project (3).png"/>
+                       <image class="about__img" id="imageBorder" width="640" height="940" href="./img/profile.png"/>
                     </defs>
                  </svg>
             </div>
