--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="https://img.freepik.com/premium-photo/fire-alphabet-letter-isolated-black-background_564276-8929.jpg?w=2000" />
+    <link rel="icon" href="./img/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anshuman Mahato</title>
     <!---------Favicon----------->
