--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                        </pattern>
                  
                        <!-- Insert your profile (recommended size: 640 x 940) -->
-                       <image class="about__img" id="imageBorder" width="640" height="940" href="./img/profile.png"/>
+                       <image class="about__img" id="imageBorder" width="640" height="940" href="./img/profile-vector.png"/>
                     </defs>
                  </svg>
             </div>
