--- a/index.html
+++ b/index.html
@@ -197,9 +197,7 @@
                     My Skills
                 </h2>
                 <p class="skills__description">
-                    I am flexiable to learning different technology.
-                    See fully what skills I have and perform
-                    to develop the project for you.
+                    I'm a tech enthusiast and open to learning different technologies.That being said, this is the tech stack that I mostly use for building projects.
                 </p>
                 <a href="#projects" class="button">See Projects</a>
             </div>
@@ -375,7 +373,7 @@
                 </a>
             </div>
             <span class="footer__copy">
-                &#169; Copyright Anshuman Mahato. All rights reserved
+                &#169; Copyright Anshuman Mahato. All rights reserved. Design inspiration from <a href="https://www.behance.net/gallery/145464425/Portfolio-Website-Design" target="_blank">Tayyab Sajad</a>
             </span>
         </div>
 
